<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">All menu</string>
    <string name="menu_slideshow">My Service</string>
    <string name="household_not_editable_msg">Deactivated household is not editable.</string>
    <string name="deactivate_household_validation">You does not select any household to deactivate.</string>
    <string name="deactivate_household_confirmation">Are you sure you want to deactivate selected household?</string>
    <string name="hh_deactivate_success_msg">Successfully transferred selected household into deactivate list.</string>
    <string name="hh_deactivate_fail_msg">Failed to transferred selected household into deactivate list. Please try again.</string>
    <string name="btn_deactivate">Deactivate</string>
    <string name="splash_button_text">To Enter App, Click Here</string>
    <string name="caution_text">Medical safety and physical distance are mandatory for COVID 19 health service. Maintain recommended safety measurement before starting your service. If you are only wearing masks and gloves, then you can provide awareness raising/counseling services, you and the beneficiaries should have a minimum distance of 2 meters/5 feet while providing services. Avoid unnecessarily touching/shaking hands with beneficiaries, and if you are ready with masks, gowns, gloves and safety glasses, SatelliteCare other services can continue. </string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_close">Close</string>
    <string name="app_name">Satellite Care</string>
    <string name="app_title">Friendship SatelliteCare</string>
    <string name="screen_title"></string>
    <string name="action_update">Update</string>
    <string name="hello_world">Hello world!</string>
    <string name="sdcard_not_present">SDCard not found!!</string>
    <string name="prescription_tbl_name">Name</string>
    <string name="prescription_tbl_qty">Qty(s)</string>
    <string name="prescription_tbl_day_use">Daily Dose</string>
    <string name="prescription_tbl_price">Price</string>
    <string name="context_menu_title">Choose Option</string>
    <string name="switch_to_live">Switch to live</string>
    <string name="switch_to_training">Switch to training</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="btn_check_availability">Check avilability</string>
    <string name="total_price">Total price(tk):</string>
    <string name="current_stock_tbl_unit_price">Unit price(tk)</string>
    <string name="exp_date">Exp. Date</string>
    <string name="btn_reduce_stock">Reduce Stock</string>
    <string name="choose_med">Choose Medicine</string>
    <string name="btn_ok">OK</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_show_answer">Show answer</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_delete_go">Delete and go</string>
    <string name="btn_no">No</string>
    <string name="btn_save">Save</string>
    <string name="btn_save_locally">Save locally</string>
    <string name="btn_update">Update</string>
    <string name="btn_save_upload">Send</string>
    <string name="btn_save_call">Phone call to helpline</string>
    <string name="btn_login">Login</string>
    <string name="btn_close">Close</string>
    <string name="btn_call">Call</string>
    <string name="btn_close_eng">Close</string>
    <string name="btn_next_question">Next</string>
    <string name="btn_next">Next</string>
    <string name="btn_send">Send</string>
    <string name="btn_previous_question">Previous</string>
    <string name="button_camera_caption">Take picture</string>
    <string name="button_gallery_caption">Select picture</string>
    <string name="button_refresh_caption">Refresh</string>
    <string name="btn_settings">Settings</string>
    <string name="error_retrieving_questionnaire">Error retrieving questionnaire.</string>
    <string name="no_internet_prompt">Internet Problem</string>
    <string name="connect_to_internet_prompt">No internet connection. Please connect to a network first.</string>
    <string name="write_enable">Continue writting</string>
    <string name="btn_complete">Complete</string>
    <string name="med_name">Medicine name</string>
    <string name="daily_dose">Daily Dose</string>
    <string name="prescription_qty">Qty</string>
    <string name="sold_qty">Sale</string>
    <string name="no_que_selected">No question selected</string>
    <string name="hint_user_id">Login ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_org_code">Org. code</string>
    <string name="remember_me">Remeber me</string>
    <string name="empty_org_code">Empty org code field</string>
    <string name="empty_user_id">Empty login id field</string>
    <string name="empty_password">Empty password field</string>
    <string name="wrong_user_pass">Wrong login ID or password</string>
    <string name="login_failed">Login failed</string>
    <string name="different_user_code">Different login id entered. Need server authentication</string>
    <string name="inactive_user">You are currently inactive</string>
    <string name="dialog_title">SatelliteCare:System message</string>
    <string name="empty_sold_medicine">Sold medicine quantity required</string>
    <string name="switch_app_mode_live">You are now entering into PRODUCTION mode. Your training data will be deleted from your storage and you\'ll be back with your working information.</string>
    <string name="switch_app_mode_traning">You are now entering into TRAINING mode. Your working information will not be available here.</string>
    <string name="exceed_sold_medicine">Reduce sold medicine quantity</string>
    <string name="input_required">Answer required</string>
    <string name="input_required_belowq">Answer required of below questions</string>
    <string name="referral_center_caption">Referral center name: </string>
    <string name="not_aplicable_for_demo">Not aplicable for demo version</string>
    <string name="center_name">Center name</string>
    <string name="going_date">Going date</string>
    <string name="referral_center_distance">Distance:  </string>
    <string name="referral_center_number">Contact number:</string>
    <string name="referral_center_transport_way">Way of transport</string>
    <string name="referral_center_time_need">Required time: </string>
    <string name="btn_record_voice">Press and hold to record</string>
    <string name="btn_recording">Recording...</string>
    <string name="btn_play">Listen</string>
    <string name="btn_receive">Receive</string>
    <string name="btn_stop">Stop</string>
    <string name="please_wait">Please wait...</string>
    <string name="try_login">Loging in</string>
    <string name="login_title">FCM Login</string>
    <string name="login_title_acf">ACF-Friendship SatelliteCare</string>
    <string name="admin_login_title">Admin Login</string>
    <string name="admin_security_pin">Security PIN</string>
    <string name="admin_password">Password</string>
    <string name="mHealth_url_title">Server Settings</string>
    <string name="mHealth_url_1">SatelliteCare Server</string>
    <string name="mHealth_url_2">Alternate Server</string>
    <string name="mHealth_url_1_hint">FCM gateway URL 1</string>
    <string name="mHealth_url_2_hint">FCM gateway URL 2</string>
    <string name="btn_login_eng">Login</string>
    <string name="btn_cancel_eng">Cancel</string>
    <string name="btn_ok_eng">OK</string>
    <string name="auto_sync_msg">Your data is not up-to-date. Please, get your data from server to continue with this system. </string>
    <string name="device_id">Device Id</string>
    <string-array name="entries_language">
        <item>English</item>
        <item>বাংলা</item>
    </string-array>
    <string-array name="entries_wait_time">
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>20 Minutes</item>
        <item>30 Minutes</item>
    </string-array>
    <string-array name="entries_appbar_spinner">
        <item>FR</item>
        <item>UG</item>
        <item>SK</item>

    </string-array>
    <string-array name="entries_auto_sync_interval">
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>30 Minutes</item>
        <item>60 Minutes</item>
        <item>120 Minutes</item>
        <item>150 Minutes</item>
    </string-array>
    <string name="questionnare_list">Health services &amp; Registration</string>
    <string name="my_data">My Data</string>
    <string name="my_activity">Quick service information</string>
    <string name="direct_sale">Direct sale</string>
    <string name="sales">Sales:</string>
    <string name="patient_followup">Patient Followup</string>
    <string name="mother_report">Mother Report</string>
    <string name="earlier_services">Earlier Services</string>
    <string name="todays_schedule">Today\'s Schedule</string>
    <string name="uploading_data">Uploading data</string>
    <string name="my_profile">My Profile</string>
    <string name="nearby_referal_center">Nearby Referral Center</string>
    <string name="stock_and_adjustment">Stock management</string>
    <string name="household_list">Household List</string>
    <string name="beneficiary_list">Beneficiary List</string>
    <string name="retrieve_data_from_server">Get Data</string>
    <string name="complete_household">Edit Household</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_cancel_interview_text">Cancel Interview</string>
    <string name="btn_sync">Sync now</string>
    <string name="detail">Detail</string>
    <string name="address">Address: </string>
    <string name="contact_number">Contact number</string>
    <string name="quantity">Quantity</string>
    <string name="skip">Skip</string>
    <string name="retrieve_my_data">Get my data</string>
    <string name="get_data">Get data</string>
    <string name="change_password">Change password</string>
    <string name="retrieve_successfull">Data retrieved successfully</string>
    <string name="no_app_update_available">Update not available</string>
    <string name="network_error">Internet problem. Please try again later</string>
    <string name="btn_back">Back</string>
    <string name="btn_upload">Upload</string>
    <string name="select_all">Select all</string>
    <string name="tomorrow_time_schedule">Tomorrow\'s Schedule</string>
    <string name="next_7_days_time_schedule">Next 30 Days Schedule </string>
    <string name="undone_time_schedule">Last 30 Days Undone Schedule</string>
    <string name="select_beneficiary">Beneficiary List</string>
    <string name="activeList">Active list</string>
    <string name="deactivatedList">Deactive list</string>
    <string name="automatically_household_create">This household number is not registered yet. If the registration process continues, the household will be registered automatically.</string>
    <string name="mdi_calendar">&#xF00ED;</string>
    <string name="mdi_arrow_left">&#xF004D;</string>
    <string name="mdi_close">&#xF05AD;</string>
    <string name="mdi_download">&#xF01DA;</string>
    <string name="mdi_upload">&#xF0552;</string>
    <string name="deactivate_households">Deactivate Households</string>
</resources>