<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mHealth="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include layout="@layout/header_layout" />

    <LinearLayout
        android:id="@+id/llSelectAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_mid"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dip"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:visibility="gone" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/select_all"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/cb_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_mid"
        android:orientation="horizontal"
        android:padding="5dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ngo.friendship.satellite.views.AppButton
                android:id="@+id/btn_upload_interview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:visibility="gone"
                mHealth:mdIcon="@string/mdi_upload"
                mHealth:text="@string/btn_upload" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ngo.friendship.satellite.views.AppButton
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                mHealth:mdIcon="@string/mdi_close"
                mHealth:text="@string/btn_close" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>