<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mHealth="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/lv_questionnaire_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:layout_margin="@dimen/square_distance"
        android:cacheColorHint="#00000000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color_mid"
        android:orientation="horizontal"
        android:padding="5dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ngo.friendship.satellite.views.AppButton
                android:id="@+id/btn_retrieve_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                mHealth:mdIcon="@string/mdi_download"
                mHealth:text="@string/retrieve_data_from_server" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ngo.friendship.satellite.views.AppButton
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                mHealth:mdIcon="@string/mdi_arrow_left"
                mHealth:text="@string/btn_back" />
        </LinearLayout>
    </LinearLayout>

    <!-- <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_get_questionnaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get Questionnaire" />

        <Button
            android:id="@+id/btn_save_all_questionnaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save all questionnaire"
            android:visibility="invisible" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_questionnaire_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000" /> -->

</LinearLayout>